--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
+    "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "5.10.2",
     "cors": "^2.8.5"
   }
 }
