--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "5.10.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^3.22.4"
   }
 }
