--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "t0ng.k",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
