--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
+    "multer": "1.4.5-lts.1",
     "zod": "^3.22.4"
   }
 }
