--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.3",
     "nodemon": "^3.1.0",
     "prisma": "^5.10.2",
+    "prisma-dbml-generator": "^0.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
