--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.529.1",
+    "@aws-sdk/lib-storage": "^3.529.1",
     "@prisma/client": "5.10.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
